Break up large test into smaller tests
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/imaging/trunk@1651171 13f79535-47bb-0310-9956-ffa450edef68